--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
     "version": "0.1.0",
     "node-red": {
         "nodes": {
-            "gpt35": "node.js"
+            "watsonxai": "node.js"
         }
     },
     "dependencies": {
         "axios": "^1.2.1",
-        "node-red-contrib-dotnsf-watsonxai": "~0.1.0"
+        "dotenv": "^16.3.1"
     },
     "repository": {
         "type": "git",
