--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
     "name": "node-red-contrib-dotnsf-watsonxai",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "node-red": {
         "nodes": {
             "watsonxai": "node.js"
         }
     },
     "dependencies": {
-        "axios": "^1.2.1",
-        "dotenv": "^16.3.1"
+        "axios": "^1.2.1"
     },
     "repository": {
         "type": "git",
@@ -24,6 +23,6 @@
     "license": "MIT",
     "homepage": "https://github.com/dotnsf/node-red-contrib-dotnsf-watsonxai",
     "engines": {
-        "node": "16.x"
+        "node": "18.x"
     }
 }
