--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-red-contrib-dotnsf-watsonxai",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "node-red": {
         "nodes": {
             "watsonxai": "node.js"
@@ -20,9 +20,6 @@
         "watsonx.ai"
     ],
     "author": "dotnsf",
-    "license": "MIT",
     "homepage": "https://github.com/dotnsf/node-red-contrib-dotnsf-watsonxai",
-    "engines": {
-        "node": "18.x"
-    }
+    "license": "MIT"
 }
